syntax = "proto3";
package DomainServices.CustomerService;
option csharp_namespace = "DomainServices.CustomerService.Contracts";

message Contact {
   
   int32 ContactTypeId = 1;
   
   string Value = 2;

   bool IsPrimary = 3;
}
